# TrellixEXAttachmentDecrypt

./: .gitignore  CLAUDE.md  README.md  env.example  pyproject.toml
.claude/: settings.json
docs/: quarantine_sample.json  sample_alert.json  sample_alerts_query.json
tests/: conftest.py  test_bounce.py  test_check.py  test_config.py  test_domain.py  test_ex_client.py  test_ingest.py  test_mailer.py  test_settings_store.py  test_tokens.py  test_ui.py  test_web_smoke.py
trellix_decrypt/: __init__.py  __main__.py  app.py  bounce.py  check.py  config.py  context.py  crypto.py  domain.py  ex_client.py  ingest.py  mailer.py  recheck.py  settings_store.py  storage.py  web.py
trellix_decrypt/static/: app.js  reveal.js  settings.js  style.css
trellix_decrypt/templates/: base.html  dashboard.html  error.html  form.html  login.html  password_request.html.j2  password_request.txt.j2  result.html  settings.html
trellix_decrypt/web/: __init__.py  auth.py  routes_api.py  routes_dashboard.py  routes_password.py  server.py
